<resources>
    <string name="app_name">DuenDinDin</string>
    <string name="msg_usuario_perfil">Olá, Duen Din Din!</string>
    <string name="msg_usuario_perfil_dados">ESSES SÃO SEUS DADOS</string>
    <string name="btn_main_entrar">ENTRE</string>
    <string name="btn_main_cadastrar">CADASTRE-SE</string>
    <string name="txt_usario_perfil_pessoais">Pessoais:</string>
    <string name="cd_usuario_perfil_img_edit">Botão para ir para a tela de alteração dos dados do usuário.</string>
    <string name="txt_usuario_perfil_nome_completo">NOME COMPLETO</string>
    <string name="txt_usuario_perfil_edit_nome_completo">Duen Din Din</string>
    <string name="txt_usuario_perfil_data_de_nascimento">DATA DE NASCIMENTO</string>
    <string name="txt_usuario_perfil_edit_data_de_nascimento">01/01/2001</string>
    <string name="txt_usuario_perfil_CEP">CEP</string>
    <string name="txt_usuario_perfil_edit_CEP">14801-600</string>
    <string name="txt_usuario_perfil_estado">ESTADO</string>
    <string name="txt_usuario_perfil_edit_estado">São Paulo</string>
    <string name="txt_usuario_perfil_cidade">CIDADE</string>
    <string name="txt_usuario_perfil_edit_cidade">Araraquara</string>
    <string name="txt_usuario_perfil_acesso">Acesso:</string>
    <string name="txt_usuario_perfil_email">EMAIL</string>
    <string name="txt_usuario_perfil_edit_email">duend@dindin.com</string>
    <string name="txt_usuario_perfil_senha">SENHA</string>
    <string name="txt_usuario_perfil_edit_senha">************</string>
    <string name="msg_usuario_perfil_esqueceu_sua_senha"><u>Redefinir senha</u></string>
    <string name="txt_usuario_perfil_financeiro">Financeiro:</string>
    <string name="txt_usuario_perfil_salario">SALÁRIO</string>
    <string name="txt_usuario_perfil_edit_salario">R$2000.00</string>
    <string name="txt_usuario_perfil_limite_de_gasto">LIMITE DE GASTO</string>
    <string name="txt_usuario_perfil_edit_limite_de_gasto">Padrão 50, 30 e 20%</string>
    <string name="txt_usuario_perfil_tooltip_help">Informational Text</string>
    <string name="cd_usuario_perfil_img_tooltip">Imagem do botão de ajuda sobre o limite de gasto do usuário</string>
    <string name="txt_usuario_cadastro_titulo">Cadastre-se</string>
    <string name="txt_usuario_cadastro_dados_pessoais_subtitulo">Dados Pessoais</string>
    <string name="txt_usuario_cadastro_dados_acesso_subtitulo">Dados Acesso</string>
    <string name="txt_usuario_cadastro_nome_completo">NOME COMPLETO *</string>
    <string name="hint_usuario_cadastro_nome">Duen Din Din</string>
    <string name="txt_usuario_cadastro_estado">ESTADO</string>
    <string name="hint_usuario_cadastro_estado">Selecione uma opção</string>
    <string name="txt_usuario_cadastro_renda_fixa">RENDA FIXA</string>
    <string name="hint_usuario_cadastro_renda">2000,00</string>
    <string name="txt_usuario_cadastro_data_de_nascimento">DATA DE NASCIMENTO *</string>
    <string name="hint_usuario_cadastro_data_nasc">dd/mm/aaaa</string>
    <string name="txt_usuario_cadastro_cidade">CIDADE</string>
    <string name="txt_usuario_cadastro_email">E-MAIL *</string>
    <string name="hint_usuario_cadastro_email">duen@dindin.com</string>
    <string name="txt_usuario_cadastro_senha">SENHA *</string>
    <string name="hint_usuario_cadastro_senha">***********</string>
    <string name="msg_cadastrado_sucesso">Usuário cadastrado com sucesso!</string>
    <string name="msg_data_nasc_invalida">Data inválida! você deve ter mais que 18 anos!</string>
    <string name="txt_usuario_cadastro_cep">CEP *</string>
    <string name="txt_usuario_cadastro_esqueci_cep">Esqueci o CEP</string>
    <string name="edt_usuario_cadastro_cep">Informe o CEP</string>
    <string name="btn_usuario_cadastro_continuar">Continuar</string>
    <string name="btn_usuario_cadastro_cadastrar">Cadastrar</string>
    <string name="msg_categoria_listagem">Olá, Duen Din Din!</string>
    <string name="msg_categoria_listagem_dados">ESSAS SÃO SUAS CATEGORIAS</string>
    <string name="txt_categoria_item_nome">Nome da Categoria - Fixo ou Variável</string>
    <string name="txt_categoria_item_descricao">Descrição</string>
    <string name="txt_categoria_item_periodo">Periodo de recorrência</string>
    <string name="cd_categoria_item_img_edit">Imagem Button para editar uma categoria</string>
    <string name="cd_categoria_item_img_remove">Imagem Button para remover uma categoria</string>
    <string-array name="spUf">
        <item>Selecione uma opção...</item>
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goias (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>
    <string-array name="spCidade">
        <item>Selecione uma opção...</item>
        <item>Araraquara</item>
    </string-array>
    <string name="txt_categoria_cadastro_titulo">Cadastro de Categoria</string>
    <string name="txt_categoria_cadastro_subtitulo">Dados da Categoria</string>
    <string name="txt_categoria_cadastro_nome">NOME *</string>
    <string name="hint_categoria_cadastro_nome">Categoria</string>
    <string name="txt_categoria_cadastro_descricao">DESCRIÇÃO</string>
    <string name="hint_categoria_cadastro_descricao">Descrição</string>
    <string name="txt_categoria_cadastro_tipo">TIPO *</string>
    <string name="txt_categoria_cadastro_recorrente">RECORRENTE *</string>
    <string name="btn_categoria_cadastro_salvar">Salvar</string>
    <string name="msg_ganho_listagem">Olá, Duen Din Din!</string>
    <string name="msg_ganho_listagem_dados">ESSES SÃO TODOS OS SEUS GANHOS</string>
    <string name="btn_ganho_listagem_novo_recebimento">NOVO RECEBIMENTO</string>
    <string name="txt_ganho_listagem_data">dd/mm/aaaa</string>
    <string name="txt_ganho_item_nome">Nome da Conta -R$ valor</string>
    <string name="txt_ganho_item_descricao">Descrição</string>
    <string name="msg_gasto_listagem_dados">ESSES SÃO TODOS OS SEUS GASTOS</string>
    <string name="btn_gasto_listagem_novo_vencimento">NOVO VENCIMENTO</string>
    <string name="txt_gasto_listagem_data">dd/mm/aaaa</string>
    <string name="msg_gasto_listagem">Olá, Duen Din Din!</string>
    <string name="txt_gasto_item_nome">Nome da Conta -R$ valor</string>
    <string name="txt_gasto_item_descricao">Descrição</string>
    <string-array name="spTipoCategoria">
        <item>Selecione uma opção...</item>
        <item>Fixo</item>
        <item>Variável</item>
    </string-array>
    <string-array name="spRecorrenteCategoria">
        <item>Selecione uma opção...</item>
        <item>SIM</item>
        <item>NÃO</item>
    </string-array>
    <string name="txt_gasto_cadastro_titulo">Cadastro de Gasto</string>
    <string name="txt_gasto_cadastro_subtitulo">Dados da Gasto</string>
    <string name="txt_gasto_cadastro_nome">NOME *</string>
    <string name="hint_gasto_cadastro_nome">Conta de Água</string>
    <string name="txt_gasto_cadastro_data_de_vencimento">DATA DO VENCIMENTO *</string>
    <string name="hint_gasto_cadastro_data_venc">dd/mm/aaaa</string>
    <string name="txt_gasto_cadastro_descricao">DESCRIÇÃO</string>
    <string name="hint_gasto_cadastro_descricao">Descrição</string>
    <string name="txt_gasto_cadastro_categoria">CATEGORIA *</string>
    <string name="txt_gasto_cadastro_valor">VALOR *</string>
    <string name="hint_gasto_cadastro_valor">11.34</string>
    <string name="btn_gasto_cadastro_salvar">Salvar</string>
    <string name="msg_data_venc_invalida">Data de vencimento inválida!</string>
    <string name="txt_ganho_cadastro_titulo">Cadastro de Ganho</string>
    <string name="txt_ganho_cadastro_subtitulo">Dados da Ganho</string>
    <string name="txt_ganho_cadastro_nome">NOME *</string>
    <string name="hint_ganho_cadastro_nome">Freelance</string>
    <string name="txt_ganho_cadastro_data_de_recebimento">DATA DO RECEBIMENTO *</string>
    <string name="hint_ganho_cadastro_data_receb">dd/mm/aaaa</string>
    <string name="txt_ganho_cadastro_descricao">DESCRIÇÃO</string>
    <string name="hint_ganho_cadastro_descricao">Descrição</string>
    <string name="txt_ganho_cadastro_categoria">CATEGORIA *</string>
    <string name="txt_ganho_cadastro_valor">VALOR *</string>
    <string name="hint_ganho_cadastro_valor">11.34</string>
    <string name="btn_ganho_cadastro_salvar">Salvar</string>
    <string name="msg_data_receb_invalida">Data de recebimento inválida!</string>
    <string-array name="spCategoriaGastoGanho">
        <item>Selecione uma opção...</item>
        <item>Categoria 1</item>
        <item>Categoria 2</item>
    </string-array>
    <string name="txt_home_titulo">Suas Finanças</string>
    <string name="txt_home_acoes_rapidas">AÇÕES RÁPIDAS</string>
    <string name="btn_home_adicionar_recebimentos">Adicionar Recebimentos</string>
    <string name="btn_home_adicionar_vencimentos">Adicionar Vencimentos</string>
    <string name="btn_home_adicionar_categoria">Adicionar Categoria</string>
    <string name="btn_home_ver_perfil">Ver Perfil</string>
    <string name="txt_home_graficos">GRÁFICOS</string>
    <string name="txt_home_vencimentos_proximos">ÚLTIMO VENCIMENTO CADASTRADO</string>
    <string name="txt_home_outras_opcoes">MAIS OPÇÕES</string>
    <string name="txt_home_todos_os_vencimentos">Próximos Vencimentos</string>
    <string name="btn_categoria_listagem_nova_categoria">Nova Categoria</string>
    <string name="txt_bottom_nav_home">Home</string>
    <string name="txt_bottom_nav_gastos">Vencimentos</string>
    <string name="txt_bottom_nav_ganhos">Recebimento</string>
    <string name="txt_bottom_nav_categorias">Categorias</string>
    <string name="txt_bottom_nav_perfil">Perfil</string>
    <string name="txt_usuario_entrar_titulo">Entrar</string>
    <string name="btn_usuario_entrar_login">ENTRAR</string>
    <string name="txt_usuario_entrar_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="txt_recuperar_senha_titulo">Alterar Senha</string>
    <string name="txt_recuperar_senha_enviar_subtitulo">EM BREVE VOCÊ RECEBERÁ UM E-MAIL PARA RECUPERAÇÃO DE SENHA.</string>
    <string name="hint_email">duen@dindin.com</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="txt_recuperar_senha_proximo_subtitulo">INFORME O CÓDIGO QUE FOI ENVIADO PARA O SEU E-MAIL.</string>
    <string name="btn_proximo">PRÓXIMO</string>
    <string name="txt_recuperar_senha_finalizar_subtitulo">Dados de Acesso</string>
    <string name="txt_recuperar_senha_nova_senha">SENHA ATUAL</string>
    <string name="txt_recuperar_senha_confirmar_senha">NOVA SENHA</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_voltar">VOLTAR</string>
    <string name="spinner_selecione_uma_opcao">Selecione uma opção</string>
    <string name="msg_erro_comunicacao_servidor">Ocorreu um erro na comunicação com o servidor.</string>
    <string name="txt_usuario_alterar_titulo">Editar Usuário</string>
    <string name="btn_usuario_editar_atualizar">Atualizar</string>
    <string name="txt_home_todos_os_ganhos">Próximos recebimentos</string>
</resources>